syntax = "proto3";

package api;

import "google/protobuf/empty.proto";

service Router {
  rpc List(google.protobuf.Empty) returns (RoutersData) {}
  rpc Get(RouterRequest) returns (RoutersData) {}
  rpc Add(RouterData) returns (RouterData) {}
  rpc Delete(RouterRequest) returns (RouterData) {}
  rpc Update(RouterData) returns (RouterData) {}
}

message RouterData {
  optional int32 ID = 1;
  int32 agent = 2;
  optional string snmp_community = 3;
  optional string ssh_username = 4;
  optional string ssh_password = 5;
  optional string conn_type = 6;
  optional string router_type = 7;
}

message RoutersData {
  repeated RouterData routers = 1;
}

message RouterRequest {
  oneof id_or_agent {
    int32 ID = 1;
    int32 agent = 2;
  }
}
